# RPGGame

./: CMakeLists.txt
Source/: main.cxx
Source/Core/: Actor.cxx  Actor.hpp  Component.hpp  Core.cxx  Core.hpp  RenderSystem.cxx  RenderSystem.hpp
Source/Core/Steps/: BattleStep.cxx  BattleStep.hpp  MenuStep.cxx  MenuStep.hpp
Source/Game/: DropType.hpp  GameTypes.hpp  MeshComponent.cxx  MeshComponent.hpp  StatComponent.cxx  StatComponent.hpp  StatFactory.cxx  StatFactory.hpp
Source/Game/Dialogue/: dialogue.cxx  dialogue.hpp
Source/Game/Drops/: Drops.cxx  Drops.hpp
Source/Game/Stats/: PersonAttack.cxx  PersonAttack.hpp  StatComponent.cxx  StatComponent.hpp  StatFactory.cxx  StatFactory.hpp
